k8s-deployment/network policy/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-ingress
  namespace: db-ns
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns-name: be-ns
      podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 80
